feat: event module sub-events (Pooja, Cultural, Competitions, Lunch/Dinner) and dashboard endpoints